----------
v4.0.0-git
----------

[jan] Allow to set vaction with only start or end date, if supported.
[jan] Add support for Sieve date extension to vacation messages (Request
      #12520).
[mjr] Export active vacation messages via the timeObjects API (Request #10885).
[mms] Added a NoSQL (MongoDB) driver for the storage backend.
[mms] Rule code has been separated from the storage backend drivers.
[jan] Use Horde\ManageSieve instead of Net_Sieve.
[mms] Rearrange the default order of filter rules.


-------
v3.2.14
-------

[jan] Never send autoreplies again when setting zero vacation days in Procmail
      or Maildrop backends (Bug #14549).
[jan] Don't split sieve body tests on commas (Bug #14546).


-------
v3.2.13
-------

[jan] Convert vacation rules in preference backend from Ingo < 2.0.
[jan] Fix some edge cases with Sieve vacation rules with date limits (Bug
      #14486).


-------
v3.2.12
-------

[jan] Fix using ingo-convert-prefs-to-sql for multiple users.
[mjr] Fix incorrect flag usage in Procmail vacation recipe (Bug #14397).
[mjr] Fix escaping mailbox names that contain utf7-imap encodings (Bug #14429).
[jan] Fix creating new spam folders.


-------
v3.2.11
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[jan] Don't ignore 'initial_page' registry setting.


-------
v3.2.10
-------

[jan] Don't duplicate messages in Procmail's vacation recipe if excluding email
      addresses (Michael.Martin@warp-it.com, Bug #14275).
[jan] Remove stop-script feature from Procmail driver.


------
v3.2.9
------

[mjr] Fix PHP deprecated warnings in unit test (PR #176, Mathieu Parent
      <math.parent@gmail.com>).
[mjr] Honor 'date', 'echo', and 'ls' path overrides (Bug #14284).
[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).
[jan] Fix Oracle compatibility (Bug #14262).


------
v3.2.8
------

[jan] Fix editing shared rulesets (Bug #12694).
[jan] Allow to edit permissions of another user's rules if that user assigned