@@ -39,12 +39,14 @@ class Ingo_Script_Maildrop extends Ingo_Script_Base
         'case_sensitive' => true,
         /* Does the driver support setting IMAP flags? */
         'imap_flags' => false,
-        /* Does the driver support the stop-script option? */
-        'stop_script' => false,
         /* Can this driver perform on demand filtering? */
         'on_demand' => false,
         /* Does the driver require a script file to be generated? */
         'script_file' => true,
+        /* Does the driver support the stop-script option? */
+        'stop_script' => false,
+        /* Does the driver support vacation start and end on time level? */
+        'vacation_time' => true,
     );
 
     /**
