@@ -2,6 +2,7 @@
 v4.0.0-git
 ----------
 
+[jan] Allow to specify time limits for vacation messages if supported.
 [jan] Allow to set vaction with only start or end date, if supported.
 [jan] Add support for Sieve date extension to vacation messages (Request
       #12520).
